correction small devices nb of el

--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ body {
     width: 100vw;
   }
 
-  .pannel:nth-of-type(4),
-  .pannel:nth-of-type(5) {
+  .panel:nth-of-type(4),
+  .panel:nth-of-type(5) {
     display: none;
   }
 }
